--- a/src/app/pages/vera/faq/faq.component.html
+++ b/src/app/pages/vera/faq/faq.component.html
@@ -3,7 +3,7 @@
       <h2
          class="text-3xl sm:text-4xl md:text-5xl font-bold bg-gradient-to-r from-purple-400 to-blue-400 bg-clip-text text-transparent mb-8"
       >
-         Vad kan du förvänta dig av en AI‑byrå?
+         Vad kan du förvänta dig av en AI-byrå?
       </h2>
       <div class="max-w-2xl w-full mx-auto">
          <div class="space-y-4">
