--- a/src/app/pages/hemmafest/hemmafest.component.html
+++ b/src/app/pages/hemmafest/hemmafest.component.html
@@ -151,4 +151,5 @@
 		</div>
 		<p class="mt-3 text-xs">© Hemmafest!. Ingen spårning. Inga annonser.</p>
 	</footer>
+	<router-outlet></router-outlet>
 </article>
